--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
     "body-parse": "^0.1.0",
     "express": "^4.17.1"
   },
-  "engines": { "node": "12" }
+  "engines": {
+    "node": "12"
+  }
 }
