--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,14 @@
   },
   "homepage": "https://github.com/vinils/WebService#readme",
   "devDependencies": {
+    "coveralls": "^3.0.6",
     "nodemon": "^1.19.3"
   },
   "dependencies": {
     "body-parse": "^0.1.0",
-    "express": "^4.17.1"
+    "chai": "^4.2.0",
+    "express": "^4.17.1",
+    "mocha": "^6.2.1"
   },
   "engines": {
     "node": "12"
