--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "homepage": "https://github.com/vinils/WebService#readme",
   "devDependencies": {
     "coveralls": "^3.0.6",
-    "nodemon": "^1.19.3"
+    "chai": "^4.2.0",
+    "nodemon": "^1.19.3",
+    "mocha": "^6.2.1"
   },
   "dependencies": {
     "body-parse": "^0.1.0",
-    "chai": "^4.2.0",
-    "express": "^4.17.1",
-    "mocha": "^6.2.1"
+    "express": "^4.17.1"
   },
   "engines": {
     "node": "12"
