--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "cover": "jest --coverage --coverageReporters=text-lcov | coveralls",
-    "test2": "nyc --reporter=html --reporter=text mocha --timeout=3000 --exit",
-    "test": "nyc --reporter=html --reporter=text mocha --timeout=3000 --exit | coveralls",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "coverage2": "coveralls"
+    "start": "node server.js",
+    "debug": "nodemon server.js",
+    "test": "nyc mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -24,11 +21,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "coveralls": "^3.0.6",
-    "istanbul": "^0.4.5",
-    "jest": "^24.9.0",
     "mocha": "^6.2.1",
-    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.3",
     "nyc": "^14.1.1"
   },
