--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "debug": "./node_modules/.bin/eslint *.js & nodemon server.js",
-    "test": "nyc mocha --exit"
+    "debug": "npm run codecheck & nodemon server.js",
+    "test": "nyc mocha --exit",
+    "codecheck": "./node_modules/.bin/eslint *.js"
   },
   "repository": {
     "type": "git",
