--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ node_js:
 cache:
   directories:
     - "node_modules"
-install: npm install
+install: 
+  - npm install
 script:
   - echo 'Testing!'
   - npm test
+after_success: 
+  - npm run coverage
